add swagger and fix err
